Remove obsolete program branding columns
